project/test/semantics/unit/good/Good23_shouldEvaluateSystemBuiltinMethods.ty
singleton class SystemTest {
    
    actions: {
        main: () -> Int = {
            val code: Int = 43;
            System.twice
            // ZMIEN NA AKCJE KTORA WYCHODZI, NA RAZIE ZWRACA + 1
        }
    }
}
